fix sizing of background on firefox

--- a/src/components/MainContent/Lectures/Index.scss
+++ b/src/components/MainContent/Lectures/Index.scss
@@ -5,7 +5,7 @@
     color: white;
     background: url("../../../assets/images/presentation.png")
       no-repeat;
-    background-size: 100%;
+    // background-size: 100%;
     background-clip: border-box;
     background-attachment: fixed;
     background-position-x: -235px;
