--- a/src/components/MainContent/Lectures/Lectures.scss
+++ b/src/components/MainContent/Lectures/Lectures.scss
@@ -1,5 +1,6 @@
 #lectures {
-  height: 100%;
+  height: 100vh;
+  overflow: auto;
   padding: 10% 4% 4% 4%!important;
   background-color:rgba(0, 0, 0, 0.7);
 
