--- a/src/components/MainContent/Publications/Publications.scss
+++ b/src/components/MainContent/Publications/Publications.scss
@@ -1,10 +1,10 @@
 @import "../../../utilities/variables";
 
 #publications {
-  height: 100%;
+  height: 101vh;
+  overflow: auto;
   padding: 10% 4% 4% 4%!important;
   background-color:rgba(0, 0, 0, 0.7);
-
 
   .ui.list>.item a {
     cursor: auto;
